--- a/app/src/main/res/layout/slate_list_item.xml
+++ b/app/src/main/res/layout/slate_list_item.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:layout_width="750px"
+    android:layout_width="match_parent"
     android:layout_height="300px"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     tools:context=".MainActivity"
     card_view:cardBackgroundColor="#71C3DE"
     card_view:cardUseCompatPadding="true"
@@ -15,11 +17,11 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF">
+        android:background="#6EC5B8">
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:padding="10dp">
 
@@ -59,7 +61,7 @@
                         android:text="Abcd"
                         android:id="@+id/dateAddedTextView"
                         android:textAlignment="center"
-                        android:textColor="#A6B3B4" />
+                        android:textColor="@color/material_blue_grey_800" />
                 </LinearLayout>
             </LinearLayout>
 
