--- a/app/src/main/res/layout/slate_list_item.xml
+++ b/app/src/main/res/layout/slate_list_item.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="300px"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
     tools:context=".MainActivity"
     card_view:cardBackgroundColor="#71C3DE"
     card_view:cardUseCompatPadding="true"
@@ -15,23 +13,23 @@
 
     <FrameLayout
         android:id="@+id/container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="#6EC5B8">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:padding="10dp">
 
-            <LinearLayout
+            <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:layout_width="wrap_content"
+                    android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:id="@+id/imageView2"
                     android:background="@drawable/round_button"
@@ -44,7 +42,11 @@
                     android:orientation="vertical"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp">
+                    android:paddingLeft="10dp"
+                    android:layout_marginRight="100dp"
+                    android:layout_toRightOf="@+id/imageView2"
+                    android:layout_gravity="center"
+                    android:id="@+id/nameAndDateLinearLayout">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -55,17 +57,28 @@
                         android:textColor="@color/material_blue_grey_800" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Abcd"
                         android:id="@+id/dateAddedTextView"
                         android:textAlignment="center"
                         android:textColor="@color/material_blue_grey_800" />
                 </LinearLayout>
-            </LinearLayout>
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:text="Open"
+                    android:background="@null"
+                    android:id="@+id/youtubeButton"
+                    android:layout_gravity="end"
+                    android:src="@android:drawable/ic_media_play"
+                    android:layout_alignParentRight="true"
+                    >
+                </ImageButton>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -78,7 +91,7 @@
                     android:text="Large Text"
                     android:id="@+id/songDescTextView"
                     android:textColor="@color/material_blue_grey_800" />
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
 
     </FrameLayout>
