--- a/app/src/main/res/layout/activity_slate.xml
+++ b/app/src/main/res/layout/activity_slate.xml
@@ -75,11 +75,56 @@
 
         </ListView>
 
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/talkLinearLayout">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="#93E2D5"
+            >
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/talkListView"
+                android:layout_above="@+id/talkBottomLayout"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:id="@+id/talkBottomLayout">
+
+                <EditText
+                    android:id="@+id/talkEditText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Your talk goes here..."
+                    >
+                </EditText>
+
+                <Button
+                    android:id="@+id/talkSendButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.2"
+                    android:text="Send" >
+                </Button>
+            </LinearLayout>
+
+        </RelativeLayout>
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
