--- a/app/src/main/res/layout/slate_list_item.xml
+++ b/app/src/main/res/layout/slate_list_item.xml
@@ -51,7 +51,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Friend"
                         android:id="@+id/friendNameTextView"
                         android:textColor="@color/material_blue_grey_800" />
@@ -86,7 +86,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Large Text"
                     android:id="@+id/songDescTextView"
                     android:layout_toLeftOf="@+id/talkButton"
@@ -103,6 +103,19 @@
                     android:layout_alignParentRight="true"
                     >
                 </ImageButton>
+                <TextView
+                    android:id="@+id/talkButtonBadgeTextView"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/talk_button_badge"
+                    android:textColor="#000000"
+                    android:layout_alignRight="@+id/talkButton"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:gravity="center"
+                    android:visibility="invisible"
+                    />
+
             </RelativeLayout>
         </LinearLayout>
 
