--- a/app/src/main/res/menu/menu_slate.xml
+++ b/app/src/main/res/menu/menu_slate.xml
@@ -4,4 +4,13 @@
     tools:context="com.slate1.activities.SlateActivity">
     <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
         <!--android:orderInCategory="100" app:showAsAction="never" />-->
+    <item android:id="@+id/action_search"
+        android:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="android.widget.SearchView"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/action_search"
+        app:showAsAction="always"
+        />
+
+
 </menu>
